# WePet

./: .gitignore  README.md  deploy.sh  docker-compose.yml  package-lock.json  prometheus.yml  test-login.ps1
.github/workflows/: lint.yml
Frontend/: Dockerfile  README.md  app.json  cloudbuild.yaml  package-lock.json  package.json
Frontend/app/: _layout.tsx  index.tsx
Frontend/assets/: moodAssets.ts
Frontend/components/: circle-button-mood.tsx  group-mood-card.tsx  mood-picker-modal.tsx  parallax-scroll-view.tsx  pet-styler.tsx  pou.tsx  themed-text.tsx
Frontend/hooks/: index.ts  (+7 more)
GroupManagment/: Dockerfile  entrypoint.sh  pyproject.toml
GroupManagment/app/: main.py
GroupManagment/app/adapter/auth/: dependencies.py
GroupManagment/app/adapter/db/: __init__.py  crud.py  database.py  group_repository_sql.py  models.py
GroupManagment/app/application/dto/: group_dto.py
GroupManagment/app/application/usecases/: create_activity.py  create_group.py  delete_activity.py  delete_group.py  get_activity.py  get_group.py  join_group.py  list_activities.py  list_group_members.py  list_user_activities.py  list_user_groups.py  remove_group_member.py  update_activity.py  update_group.py  update_group_member.py
GroupManagment/app/db/: crud.py  database.py
GroupManagment/app/domain/entities/: activity.py  group.py
GroupManagment/app/domain/repositories/: group_repository.py
GroupManagment/app/interface/http/: routers.py
PetManagment/: main.py  pyproject.toml
SharingService/: pyproject.toml
UserManagment/: Dockerfile  pyproject.toml
docs/: ARCHITECTURE.md
(+100 files in other folders)
